--- a/style.css
+++ b/style.css
@@ -11,36 +11,86 @@ h1 {
     font-size: 40px;
 }
 
+p {
+    color: #9999;
+}
+
+.section_title p {
+    width: 50%;
+    margin: 0 auto;
+}
+
 .container {
     display: flex;
     margin-bottom: 150px;
 }
 
-.hero {
+
+
+.hero-left {
+
     text-transform: capitalize;
-    width: 90%;
-    padding: 0px 50px;
+    width: 50%;
+    padding-left: 5%;
 
 }
 
 .order-btn {
     text-transform: uppercase;
-    font-size: 18px;
-    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: 700;
+    margin-top: 20px;
+    padding: 8px 18px;
     border-radius: 20px;
     color: aliceblue;
     text-decoration: none;
-    background-image: linear-gradient(orange, tomato);
+    background-image: linear-gradient(blue, skyblue);
 }
 
-.hero-left {
-    margin-top: 5rem;
+
+.hero-desc {
+    margin-top: 4rem;
 }
 
-.hero img {
+.hero-left img {
     width: 100%;
 }
 
 .clr {
     color: tomato;
+}
+
+.about {
+    background-image: url(images/hero-bg.jpg);
+    background-repeat: no-repeat;
+}
+
+.section_title {
+    text-align: center;
+}
+
+.card {
+    box-shadow: 10px 10px 30px rgb(227, 227, 227);
+    padding: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 14px;
+}
+
+.gallry-item {
+    margin-top: 50px;
+}
+
+.gallry-item img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+.members {
+    text-align: center;
+}
+
+footer {
+    background-image: linear-gradient(blue, black);
+    text-align: center;
 }
